--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       />
     </section>
     <main>
-      <section>
+      <section class="klimaneutral">
         <h1>Das neue Normal:klimaneutrale Energie für Zuhause und unterwegs</h1>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
@@ -44,7 +44,7 @@
           distinctio. Cupiditate, incidunt omnis.
         </p>
       </section>
-      <section>
+      <section class="heizen">
         <h2>Wollt ihr mit Strom heizen?</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
@@ -63,13 +63,16 @@
           distinctio. Cupiditate, incidunt omnis.
         </p>
       </section>
-      <section>
+      <section class="card-section">
         <article>
           <img
+            class="E-Mobilität"
             src="https://images.ctfassets.net/tkvx6dicotyn/7cvGOJTKr9aEBWqPfGsNPB/263ce049cca9b80622b84a2959cbb1e7/eMob_Teaser_Image_1024x576.png?w=360&amp;q=90"
             alt="E-Mobilität"
           />
-          <h3>E-Moblität ist kein Traum. Sondern Zukunft</h3>
+          <header>
+            <h3>E-Moblität ist kein Traum. Sondern Zukunft</h3>
+          </header>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos sint
             voluptate praesentium reiciendis, reprehenderit ab, iure aut id
@@ -79,13 +82,16 @@
           <a href="index.html">Zur E-Mobilität</a>
         </article>
       </section>
-      <section>
+      <section class="card-section">
         <article>
           <img
+            class="E-Mobilität"
             src="https://images.ctfassets.net/tkvx6dicotyn/3vw4jrlT0aMpE06yi8t6HM/fbabb228c4e307d3683dfa46d64df6ee/Podcast_Teaser_Image_1024x576.png?w=360&amp;q=90"
             alt="Podcast"
           />
-          <h3>E-Moblität ist kein Traum. Sondern Zukunft</h3>
+          <header>
+            <h3>E-Moblität ist kein Traum. Sondern Zukunft</h3>
+          </header>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos sint
             voluptate praesentium reiciendis, reprehenderit ab, iure aut id
@@ -95,7 +101,7 @@
           <a href="index.html">Zur E-Mobilität</a>
         </article>
       </section>
-      <section>
+      <section class="klimareformen">
         <h2>
           LichtBlick ararbeitet 5 Klimareformen für Klimaneutralität bis 2035
         </h2>
