feature:add classes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           dolor voluptates eligendi repellendus ullam, amet cumque. Pariatur,
           distinctio. Cupiditate, incidunt omnis.
         </p>
-        <button>Mehr zu WärmeStrom</button>
+        <button class="heizen-button">Mehr zu WärmeStrom</button>
       </section>
       <section>
         <h2>Gute Ideen für ein besseres Klima</h2>
@@ -111,19 +111,23 @@
           dolor voluptates eligendi repellendus ullam, amet cumque. Pariatur,
           distinctio. Cupiditate, incidunt omnis.
         </p>
-        <button>Zu den Reformen</button>
+        <button class="klimareformen-button">Zu den Reformen</button>
       </section>
     </main>
     <footer>
-      <li>Impressum</li>
-      <li>Datenschutz</li>
-      <li>Cookies-Zustimmung</li>
-      <li>Kontakt</li>
-      <li>Rechliche Hinweise</li>
-      <li>Veröffentlichungen</li>
-      <li>Marktpartner</li>
-      Made with ❤️ by:
-      <a href="https://github.com/timhe375" target="blank">Timhe</a>
+      <ul>
+        <li class="nav-item"><a href="index.html">Impressum</a></li>
+        <li class="nav-item"><a href="index.html">Datenschutz</a></li>
+        <li class="nav-item"><a href="index.html">Cookies-Zustimmung</a></li>
+        <li class="nav-item"><a href="index.html">Kontakt</a></li>
+        <li class="nav-item"><a href="index.html">Rechliche Hinweise</a></li>
+        <li class="nav-item"><a href="index.html">Veröffentlichungen</a></li>
+        <li class="nav-item"><a href="index.html">Marktpartner</a></li>
+
+        <a href="https://github.com/timhe375" target="blank"
+          >Made with ❤️ by: Timhe</a
+        >
+      </ul>
     </footer>
   </body>
 </html>
