fix: fixes the comments

--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
     <title>Lichtblick</title>
   </head>
   <body>
-    <header id="header">
-      <nav id="navigation">
+    <header class="header">
+      <nav class="navigation">
         <img
           class="lichtblick-logo"
           src="https://upload.wikimedia.org/wikipedia/commons/0/0d/LichtBlick-Logo-2020.svg"
           alt="LichtBlick-Logo-2020"
         />
-        <li>Für euch</li>
-        <li>Für Unternehmen</li>
-        <li>Fürs Klima</li>
+        <a href="index.html">Für euch</a>
+        <a href="index.html">Für Unternehmen</a>
+        <a href="index.html">Fürs Klima</a>
       </nav>
+      <section>
+        <img
+          class="header-logo"
+          src="https://images.pexels.com/photos/2559941/pexels-photo-2559941.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260"
+          alt="schöne Landschaft"
+        />
+      </section>
     </header>
-    <section>
-      <img
-        class="header-logo"
-        src="https://images.pexels.com/photos/2559941/pexels-photo-2559941.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260"
-        alt="schöne Landschaft"
-      />
-    </section>
     <main>
       <section class="klimaneutral">
         <h1>Das neue Normal:klimaneutrale Energie für Zuhause und unterwegs</h1>
@@ -66,7 +66,7 @@
       <section class="card-section">
         <article>
           <img
-            class="E-Mobilität"
+            class="mobilitaet"
             src="https://images.ctfassets.net/tkvx6dicotyn/7cvGOJTKr9aEBWqPfGsNPB/263ce049cca9b80622b84a2959cbb1e7/eMob_Teaser_Image_1024x576.png?w=360&amp;q=90"
             alt="E-Mobilität"
           />
@@ -85,7 +85,7 @@
       <section class="card-section">
         <article>
           <img
-            class="E-Mobilität"
+            class="mobilitaet"
             src="https://images.ctfassets.net/tkvx6dicotyn/3vw4jrlT0aMpE06yi8t6HM/fbabb228c4e307d3683dfa46d64df6ee/Podcast_Teaser_Image_1024x576.png?w=360&amp;q=90"
             alt="Podcast"
           />
@@ -99,7 +99,7 @@
             minima neque libero?
           </p>
           <a href="index.html">Zur E-Mobilität</a>
-        </article>
+        </section>
       </section>
       <section class="klimareformen">
         <h2>
